# Memallocator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Memallocator.sln  Memallocator.vcxproj  Memallocator.vcxproj.filters  ReadMe.txt  TODO  main.cpp
include/: Allocator.h  EnvTypes.h  MemTypes.h  Memallocator.h  MemoryArray.h  PoolAllocator.h  PtrHandle.h  StackAllocator.h  Types.h  memallocator_local_definitions.h  memallocator_local_includes.h
include/test/: Array.h
src/: Memallocator.cpp  PoolAllocator.cpp
test/: TestPtrHandle.h  main.cpp  test.cpp  test.vcxproj  test.vcxproj.filters
